--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Nick Ooms",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^1.1.3",
     "fs-blob-store": "^5.2.1",
     "persistent-memoize": "0.0.2",
     "request": "^2.72.0"
