--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.3",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
     "fs-blob-store": "^5.2.1",
     "persistent-memoize": "0.0.2",
     "request": "^2.72.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-plugin-transform-class-properties": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "eslint-config-airbnb": "^9.0.1"
   }
 }
